Compressed background image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -123,7 +123,7 @@ hr {
 /********** HEADER WRAP **********/
 #headerwrap {
     width: 100%;
-    background: url(../img/metalabz-background.png) no-repeat center center fixed; 
+    background: url(../img/metalabz-background.jpg) no-repeat center center fixed; 
 	  -webkit-background-size: cover;
 	  -moz-background-size: cover;
 	  -o-background-size: cover;
